# connectedbyairm2021

./: airm.py  airm2html.py  main.py  mapping.py  mapping2html.py  menu.py  pyproject.toml  utils.py
docs/: index.html
docs/airm/: community.html  contact-us.html  developers.html  documentation.html  faq.html  index.html  search.html  viewer-with-supplements.html  viewer.html
docs/airm/announcements/: 01-01-2020-AIRM-1.0.1-is-available.html
docs/airm/developers/: .html  AIXM-ADR-list-template.html  AIXM-list-template.html  AMXM-list-template.html  adr-23.5.0-extension-to-aixm-5.1.1-to-airm-1.0.0.html  advanced-search.html  airm-change-request.html  aixm-5.1.1-to-airm-1.0.0.html  amxm-2.0.0-to-airm-1.0.0.html  amxm_2.0.0_to_airm_1.0.0.html  api.html  concept-example.html  concept-list-example.html  concept-list-template.html  downloads.html  fixm-4-mapping.html  fixm-4.2.0-to-airm-1.0.0.html  icao-wxxm-3.0.0-to-airm-1.0.0.html  icao_wxxm_3.0.0_to_airm_1.0.0.html  semantic-correspondences.html
docs/airm/search/: results.html
xlsx/: ADR_23.5.0_Semantic_Correspondence_Report.xlsx  AIXM_5.1.1_Semantic_Correspondence_Report.xlsx  AMXM_2.0.0_Semantic_Correspondence_Report.xlsx  FIXM_4.2.0_Semantic_Correspondence_Report.xlsx  ICAO_WXXM_3.0.0_Semantic_Correspondence_Report_v2.xlsx  ICAO_WXXM_3.0.0_Semantic_Correspondence_Report_v3.xlsx  connected_index.xlsx  icao_wxxm_3.0.0_Semantic_Correspondence_Report.xlsx  icao_wxxm_3.0.0_Semantic_Correspondence_Report_v1.xlsx
xlsx/airm/: cp_core.xlsx  cp_supp.xlsx  cx_abbr.xlsx  cx_terms.xlsx  logical_core.xlsx  logical_supp.xlsx
(+6400 files in other folders)
