[tool.poetry]
name = "connectedbyairm2021"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.6.2"
pandas = "^1.2.2"
bs4 = "^0.0.1"
openpyxl = "^3.0.6"
xlrd = "^2.0.1"
aixm = "^1.0.2"
XlsxWriter = "^1.3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
